Fix many bugs in new routes
